Adjust styles to prevent overflow in full waiting room for iphone SE

--- a/client/src/styles/components/_menu.scss
+++ b/client/src/styles/components/_menu.scss
@@ -1,3 +1,13 @@
+@mixin phone-styles-menu {
+  .menu {
+    &__btn--start-game {
+      font-size: 2.2dvh;
+      width: 18dvh;
+      height: 4.5dvh;
+    }
+  }
+}
+
 .menu {
   display: flex;
   flex-direction: column;
